# vectis

./: Cargo.toml
contracts/factory/tests/: common.rs  multisig_new_instantiation_tests.rs  proxy_instantiation_tests.rs  proxy_migration_tests.rs
contracts/gov-tokens/: Cargo.toml
contracts/gov-tokens/examples/: schema.rs
contracts/gov-tokens/src/: contract.rs  enumerable.rs  error.rs  msg.rs  state.rs
js-app/src/: e2e.spec.ts
